; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_memory.c_builtin_cart.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_memory.c_builtin_cart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Atari800_builtin_basic = common dso_local global i64 0, align 8
@MEMORY_ram_size = common dso_local global i32 0, align 4
@MEMORY_basic = common dso_local global i32* null, align 8
@Atari800_builtin_game = common dso_local global i64 0, align 8
@MEMORY_xegame = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @builtin_cart to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @builtin_cart(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i64, i64* @Atari800_builtin_basic, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %22

6:                                                ; preds = %1
  %7 = load i32, i32* %3, align 4
  %8 = and i32 %7, 2
  %9 = icmp eq i32 %8, 0
  br i1 %9, label %10, label %22

10:                                               ; preds = %6
  %11 = load i32, i32* %3, align 4
  %12 = and i32 %11, 16
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %20, label %14

14:                                               ; preds = %10
  %15 = load i32, i32* @MEMORY_ram_size, align 4
  %16 = icmp ne i32 %15, 576
  br i1 %16, label %17, label %22

17:                                               ; preds = %14
  %18 = load i32, i32* @MEMORY_ram_size, align 4
  %19 = icmp ne i32 %18, 1088
  br i1 %19, label %20, label %22

20:                                               ; preds = %17, %10
  %21 = load i32*, i32** @MEMORY_basic, align 8
  store i32* %21, i32** %2, align 8
  br label %39

22:                                               ; preds = %17, %14, %6, %1
  %23 = load i64, i64* @Atari800_builtin_game, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %38

25:                                               ; preds = %22
  %26 = load i32, i32* %3, align 4
  %27 = and i32 %26, 64
  %28 = icmp eq i32 %27, 0
  br i1 %28, label %29, label %38

29:                                               ; preds = %25
  %30 = load i32, i32* %3, align 4
  %31 = and i32 %30, 16
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %36, label %33

33:                                               ; preds = %29
  %34 = load i32, i32* @MEMORY_ram_size, align 4
  %35 = icmp slt i32 %34, 320
  br i1 %35, label %36, label %38

36:                                               ; preds = %33, %29
  %37 = load i32*, i32** @MEMORY_xegame, align 8
  store i32* %37, i32** %2, align 8
  br label %39

38:                                               ; preds = %33, %25, %22
  store i32* null, i32** %2, align 8
  br label %39

39:                                               ; preds = %38, %36, %20
  %40 = load i32*, i32** %2, align 8
  ret i32* %40
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
